--- a/PriceComparer.Scrapers.Tests/PriceComparer.Scrapers.Tests.csproj
+++ b/PriceComparer.Scrapers.Tests/PriceComparer.Scrapers.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{803D2EC3-A938-4E4E-ABEA-9F88B026786F}</ProjectGuid>
+    <ProjectGuid>{D2A66E09-0851-47B3-ABC5-B2C0276EA152}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PriceComparer.Plus.Tests</RootNamespace>
-    <AssemblyName>PriceComparer.Plus.Tests</AssemblyName>
+    <RootNamespace>PriceComparer.Scrapers.Tests</RootNamespace>
+    <AssemblyName>PriceComparer.Scrapers.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -48,8 +48,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PlusProductStoreTests.cs" />
+    <Compile Include="JumboProductStoreTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -58,6 +59,10 @@
     <ProjectReference Include="..\PriceComparer.Domain\PriceComparer.Domain.csproj">
       <Project>{beb3a875-1507-4595-8594-f7dd4d1f373c}</Project>
       <Name>PriceComparer.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PriceComparer.Scrapers\PriceComparer.Scrapers.csproj">
+      <Project>{5031da4e-39d3-45e5-a5b4-03e544c94000}</Project>
+      <Name>PriceComparer.Scrapers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
