Added special prices; highlight offers in product overview.

--- a/PriceComparer.Domain/PriceComparer.Domain.csproj
+++ b/PriceComparer.Domain/PriceComparer.Domain.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Extensions\ConcurrentBagExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Products\IProductStore.cs" />
+    <Compile Include="Products\Price.cs" />
     <Compile Include="Products\Product.cs" />
     <Compile Include="Products\ProductFinder.cs" />
     <Compile Include="Products\UnitSize.cs" />
